[package]
name = "sabmemory"
version = "0.1.0"
edition = "2021"
authors = ["Sablinova"]
description = "Lightweight Rust MCP memory server. ~6 MB RAM vs ~500-850 MB for embedding-based alternatives."
repository = "https://github.com/Sablinova/sabmemory"
license = "MIT"

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io"] }
rusqlite = { version = "0.38", features = ["bundled", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
